--- a/Youtube-UIKit-API/views/NewsCell.xib
+++ b/Youtube-UIKit-API/views/NewsCell.xib
@@ -24,14 +24,52 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vGk-nO-HLM">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test-user-image" translatesAutoresizingMaskIntoConstraints="NO" id="9g1-nc-xcu">
+                                                <rect key="frame" x="5" y="5" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="VOc-xi-3Ls"/>
+                                                    <constraint firstAttribute="height" constant="40" id="gNB-9Y-Hp1"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="ask-31-20i"/>
+                                            <constraint firstItem="9g1-nc-xcu" firstAttribute="centerY" secondItem="vGk-nO-HLM" secondAttribute="centerY" id="kzY-ZX-m4a"/>
+                                            <constraint firstItem="9g1-nc-xcu" firstAttribute="centerX" secondItem="vGk-nO-HLM" secondAttribute="centerX" id="ntR-HU-hur"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JeR-CP-jVq">
                                         <rect key="frame" x="50" y="0.0" width="369" height="50"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="VJr-fd-Oye">
+                                                <rect key="frame" x="0.0" y="5" width="369" height="34.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breaking Bad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yVi-1N-xau">
+                                                        <rect key="frame" x="0.0" y="0.0" width="87.5" height="18"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="18" id="glq-c6-t99"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 Hours ago (edited)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QuO-xZ-j5J">
+                                                        <rect key="frame" x="0.0" y="18" width="120" height="16.5"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="VJr-fd-Oye" secondAttribute="trailing" id="9VF-GQ-Uqn"/>
+                                            <constraint firstItem="VJr-fd-Oye" firstAttribute="leading" secondItem="JeR-CP-jVq" secondAttribute="leading" id="X67-bT-hjZ"/>
+                                            <constraint firstItem="VJr-fd-Oye" firstAttribute="top" secondItem="JeR-CP-jVq" secondAttribute="top" constant="5" id="k0k-5P-sCQ"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vw3-Po-TJd">
                                         <rect key="frame" x="419" y="0.0" width="30" height="50"/>
@@ -47,9 +85,21 @@
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hvI-Mi-vRy">
                                 <rect key="frame" x="0.0" y="50" width="449" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OtP-x9-zhE">
+                                        <rect key="frame" x="3" y="0.0" width="443" height="46"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstItem="OtP-x9-zhE" firstAttribute="leading" secondItem="hvI-Mi-vRy" secondAttribute="leading" constant="3" id="2Be-lS-u9S"/>
+                                    <constraint firstAttribute="trailing" secondItem="OtP-x9-zhE" secondAttribute="trailing" constant="3" id="C71-MO-iVt"/>
+                                    <constraint firstAttribute="bottom" secondItem="OtP-x9-zhE" secondAttribute="bottom" constant="4" id="GhR-8q-Qto"/>
                                     <constraint firstAttribute="height" constant="50" id="Smi-6K-wbg"/>
+                                    <constraint firstItem="OtP-x9-zhE" firstAttribute="top" secondItem="hvI-Mi-vRy" secondAttribute="top" id="oHO-bo-26f"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brbad" translatesAutoresizingMaskIntoConstraints="NO" id="RwY-RL-aRo">
@@ -61,43 +111,74 @@
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2zJ-FY-PBr">
                                 <rect key="frame" x="0.0" y="450" width="449" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2d-wW-s0n">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="dcq-d2-vvd"/>
-                                        </constraints>
-                                        <state key="normal" title="L"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5P-GC-XmX">
-                                        <rect key="frame" x="30" y="0.0" width="30" height="50"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZCQ-5I-Ms3">
+                                        <rect key="frame" x="0.0" y="0.0" width="10" height="50"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="2I1-1s-UIB"/>
+                                            <constraint firstAttribute="width" constant="10" id="s3l-dw-CQc"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vm0-6F-7Gp">
-                                        <rect key="frame" x="60" y="0.0" width="30" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2d-wW-s0n">
+                                        <rect key="frame" x="10" y="0.0" width="25" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="dcq-d2-vvd"/>
+                                        </constraints>
+                                        <state key="normal" image="hand.thumbsup" catalog="system"/>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5P-GC-XmX">
+                                        <rect key="frame" x="35" y="0.0" width="37" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3,8 K" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSv-XI-PMb">
+                                                <rect key="frame" x="0.0" y="0.0" width="37" height="50"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="37" id="2I1-1s-UIB"/>
+                                            <constraint firstAttribute="bottom" secondItem="SSv-XI-PMb" secondAttribute="bottom" id="eNh-mT-QhV"/>
+                                            <constraint firstItem="SSv-XI-PMb" firstAttribute="leading" secondItem="Z5P-GC-XmX" secondAttribute="leading" id="gV0-XK-6uv"/>
+                                            <constraint firstAttribute="trailing" secondItem="SSv-XI-PMb" secondAttribute="trailing" id="qVw-Wu-RoJ"/>
+                                            <constraint firstItem="SSv-XI-PMb" firstAttribute="top" secondItem="Z5P-GC-XmX" secondAttribute="top" id="wqZ-tu-OxD"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vm0-6F-7Gp">
+                                        <rect key="frame" x="72" y="0.0" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="ShZ-RC-K8U"/>
                                         </constraints>
-                                        <state key="normal" title="D"/>
+                                        <state key="normal" image="hand.thumbsdown" catalog="system"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4T-7I-kYi">
-                                        <rect key="frame" x="90" y="0.0" width="299" height="50"/>
+                                        <rect key="frame" x="102" y="0.0" width="285" height="50"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2CC-Ms-0an">
-                                        <rect key="frame" x="389" y="0.0" width="30" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2CC-Ms-0an">
+                                        <rect key="frame" x="387" y="0.0" width="25" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="PAN-f7-jqR"/>
+                                            <constraint firstAttribute="width" constant="25" id="PAN-f7-jqR"/>
                                         </constraints>
-                                        <state key="normal" title="C"/>
+                                        <state key="normal" image="text.bubble" catalog="system"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8cb-MY-gxD">
-                                        <rect key="frame" x="419" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="412" y="0.0" width="37" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 K" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1po-hW-BXe">
+                                                <rect key="frame" x="0.0" y="0.0" width="37" height="50"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="Udc-ux-v81"/>
+                                            <constraint firstItem="1po-hW-BXe" firstAttribute="top" secondItem="8cb-MY-gxD" secondAttribute="top" id="Kvl-xR-wPY"/>
+                                            <constraint firstAttribute="trailing" secondItem="1po-hW-BXe" secondAttribute="trailing" id="LrU-t0-np4"/>
+                                            <constraint firstItem="1po-hW-BXe" firstAttribute="leading" secondItem="8cb-MY-gxD" secondAttribute="leading" id="SQJ-qm-Kbx"/>
+                                            <constraint firstAttribute="width" constant="37" id="Udc-ux-v81"/>
+                                            <constraint firstAttribute="bottom" secondItem="1po-hW-BXe" secondAttribute="bottom" id="WDO-1D-TrQ"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -115,11 +196,18 @@
                     <constraint firstAttribute="bottom" secondItem="8zp-bt-c9j" secondAttribute="bottom" id="kgD-Nw-feU"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="profilePicture" destination="9g1-nc-xcu" id="5pi-Yu-Tjv"/>
+            </connections>
             <point key="canvasLocation" x="118.11594202898551" y="222.99107142857142"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="brbad" width="810" height="458"/>
+        <image name="hand.thumbsdown" catalog="system" width="128" height="128"/>
+        <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
+        <image name="test-user-image" width="1210" height="544"/>
+        <image name="text.bubble" catalog="system" width="128" height="110"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
