--- a/Youtube-UIKit-API/views/VideoCell.xib
+++ b/Youtube-UIKit-API/views/VideoCell.xib
@@ -106,15 +106,13 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-IN-aof">
                                         <rect key="frame" x="530" y="0.0" width="50" height="100"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MFu-aZ-DNc">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MFu-aZ-DNc">
                                                 <rect key="frame" x="15" y="8" width="20" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="76b-hR-Lsi"/>
                                                     <constraint firstAttribute="height" constant="20" id="nv3-Px-7ak"/>
                                                 </constraints>
-                                                <state key="normal" title="+">
-                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
+                                                <state key="normal" title="+"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
